Add login and register pages

--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -38,11 +38,8 @@
 }
 
 .HomeMailerWrapper {
-  transition: ease all .5s;
   margin: 8.5rem 0;
-
   width: fit-content;
-
   transition: ease all .5s;
 }
 
@@ -86,66 +83,10 @@
   background-color: rgba(215, 91, 122, 0.9);
 }
 
-.MuiFormControl-root {
-  width: 18.75rem;
-  margin: 0 0 15px 0 !important;
-}
-
-.MuiFormControl-root:nth-child(4) {
+.HomeMailerCard .MuiFormControl-root:nth-child(4) {
   margin: 0 0 25px 0 !important;
 }
 
-.MuiInputBase-root {
-  color: black !important;
-  opacity: 1 !important;
-
-  font: inherit !important;
-}
-
-.HomeMailerCard textarea::-webkit-scrollbar {
-  width: 8px;
-}
-
-.HomeMailerCard textarea::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-.HomeMailerCard textarea::-webkit-scrollbar-thumb {
-  background: #888;
-  transition: ease all .5s;
-}
-
-.HomeMailerCard textarea::-webkit-scrollbar-thumb:hover {
-  background: #d75b79;
-}
-
-.MuiInputBase-input {
-  font-size: 1rem !important;
-  font-weight: 500 !important;
-}
-
-.MuiInputBase-input::placeholder {
-  color: black !important;
-  opacity: 1 !important;
-  font-size: 1.125rem !important;
-  font-weight: 500 !important;
-}
-
-.MuiInput-underline:after {
-  border-bottom: 2px solid #d75b79 !important;
-}
-
-.MuiOutlinedInput-multiline {
-  padding: .75rem !important;
-}
-
-.MuiOutlinedInput-root {
-  border-radius: 5px !important;
-}
-
-.Mui-focused fieldset {
-  border-color: #d75b79 !important;
-}
 
 @media (max-width: 1024px){
   .HomeBody{
