--- a/src/styles.css
+++ b/src/styles.css
@@ -1,31 +1,8 @@
-@media (max-width: 1080px) {
-  html {
-    font-size: 93.75%; /* 15px */
-  }
-}
-
-@media (max-width: 720px) {
-  html {
-    font-size: 87.5%; /* 14px */
-  }
-}
-
-@media (max-width: 540px) {
-  html {
-    font-size: 81.25%; /* 13px */
-  }
-}
-
-@media (max-width: 360px) {
-  html {
-    font-size: 75%; /* 12px */
-  }
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
   font-family: "Montserrat", sans-serif;
 }
 
@@ -41,31 +18,16 @@
   font: inherit !important;
 }
 
-.HomeMailerCard textarea::-webkit-scrollbar {
-  width: 8px;
-}
-
-.HomeMailerCard textarea::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-.HomeMailerCard textarea::-webkit-scrollbar-thumb {
-  background: #888;
-  transition: ease all .5s;
-}
-
-.HomeMailerCard textarea::-webkit-scrollbar-thumb:hover {
-  background: #d75b79;
-}
 
 .MuiInputBase-input {
-  font-size: 1rem !important;
+  font-size: 1.125rem !important;
   font-weight: 500 !important;
 }
 
 .MuiInputBase-input::placeholder {
   color: black !important;
   opacity: 1 !important;
+
   font-size: 1.125rem !important;
   font-weight: 500 !important;
 }
@@ -84,4 +46,52 @@
 
 .Mui-focused fieldset {
   border-color: #d75b79 !important;
+}
+
+.Icon {
+  color: white !important;
+}
+
+.MuiPaper-root {
+  background: #d75b79 !important;
+  
+  padding: 1.2rem 1.8rem !important;
+}
+
+.MuiDrawer-paper img {
+  height: 3rem;
+  width: 3rem;
+
+  margin: 8px;
+
+  -webkit-user-drag: none;
+  transition: ease all .5s;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+    /* 15px */
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+    /* 14px */
+  }
+}
+
+@media (max-width: 540px) {
+  html {
+    font-size: 81.25%;
+    /* 13px */
+  }
+}
+
+@media (max-width: 360px) {
+  html {
+    font-size: 75%;
+    /* 12px */
+  }
 }
