--- a/src/pages/register/styles.css
+++ b/src/pages/register/styles.css
@@ -14,7 +14,7 @@
   left: 2rem;
 }
 
-.RegisterHeader.Logo {
+.RegisterHeader .Logo {
   color: inherit;
 
   font-weight: 500;
@@ -80,10 +80,15 @@
   color: white;
   background: #d75b79;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   font-weight: 500;
   font-size: 1.25rem;
   text-decoration: none;
 
+  margin-top: 10px;
   padding: 10px 0;
   border: none;
   border-radius: 0 20px 20px 20px;
@@ -96,10 +101,6 @@
 
 .RegisterCard .RegisterCardSubmit:hover {
   background-color: rgba(215, 91, 122, 0.9);
-}
-
-.RegisterCard .MuiFormControl-root:nth-child(4) {
-  margin: 0 0 25px 0 !important;
 }
 
 .RegisterWrapper a {
