--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -19,8 +19,8 @@
   font-size: 2.5rem;
 
   text-decoration: none;
-  -webkit-user-drag: none;
 
+  -webkit-user-drag: none;
   transition: ease all .5s;
 }
 
@@ -135,6 +135,7 @@
 .MuiDrawer-paper .HeaderDrawerLinks {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   transition: ease all .5s;
 }
