--- a/src/styles.css
+++ b/src/styles.css
@@ -54,15 +54,25 @@
 
 .MuiPaper-root {
   background: #d75b79 !important;
-  
+
   padding: 1.2rem 1.8rem !important;
 }
 
-.MuiDrawer-paper img {
-  height: 3rem;
-  width: 3rem;
+.MuiDrawer-paper {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center;
+}
 
-  margin: 8px;
+.MuiDrawer-paper p {
+  color: white;
+
+  font-size: 1.5rem;
+  font-weight: 600;
+
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid white;
 
   -webkit-user-drag: none;
   transition: ease all .5s;
