--- a/src/pages/match/styles.css
+++ b/src/pages/match/styles.css
@@ -59,10 +59,6 @@
   font-size: 1.125rem;
 }
 
-.MatchAbout p:first-child {
-  font-size: 1.125rem;
-}
-
 .MatchAbout a {
   color: white;
   background: #d75b79;
@@ -91,58 +87,6 @@
   background-color: rgba(215, 91, 122, 0.9);
 }
 
-.MatchMailer {
-  margin: 8.5rem 0;
-  width: fit-content;
-
-  transition: ease all .5s;
-}
-
-.MatchMailerCard {
-  display: flex;
-  flex-direction: column;
-
-  width: fit-content;
-  padding: 1.25rem 1.75rem;
-  border: solid #d75b79 2px;
-  border-radius: 0 20px 20px 20px;
-
-  transition: ease all .5s;
-}
-
-.MatchMailerCard p {
-  font-size: 1.125rem;
-  font-weight: 500;
-
-  margin-bottom: 7px;
-}
-
-.MatchMailerCard .MuiFormControl-root:nth-child(4) {
-  margin: 0 0 25px 0 !important;
-}
-
-.MatchMailerCard textarea::-webkit-scrollbar {
-  width: 8px;
-}
-
-.MatchMailerCard textarea::-webkit-scrollbar-track {
-  background: #f1f1f1;
-
-  border-radius: 5px;
-}
-
-.MatchMailerCard textarea::-webkit-scrollbar-thumb {
-  background: #888;
-
-  border-radius: 5px;
-
-  transition: ease all .5s;
-}
-
-.MatchMailerCard textarea::-webkit-scrollbar-thumb:hover {
-  background: #d75b79;
-}
-
 @media (max-width: 1024px) {
   .MatchBody {
     justify-content: space-between;
@@ -158,17 +102,9 @@
   .MatchAbout {
     margin: 2rem 0;
   }
-
-  .MatchMailer {
-    margin: 0 0 2rem 0;
-  }
 }
 
 @media (max-width: 688px) {
-  .MatchMailer {
-    margin-top: 0rem;
-  }
-
   .MatchAbout {
     width: 22rem;
   }
@@ -181,21 +117,7 @@
     font-size: 1.25rem;
   }
 
-  .MatchMailerCard p {
-    font-size: 1.25rem;
-  }
-
-  .MailerCardSubmit {
+  .MatchAbout a {
     font-size: 1.50rem;
-  }
-
-  .MatchMailerCard .MuiInputBase-input {
-    font-size: 1.25rem !important;
-    font-weight: 500 !important;
-  }
-
-  .MatchMailerCard .MuiInputBase-input::placeholder {
-    font-size: 1.25rem !important;
-    font-weight: 500 !important;
   }
 }
